add Isfahan uni to the intro page

--- a/Presentation/contextmanagers.tex
+++ b/Presentation/contextmanagers.tex
@@ -42,10 +42,9 @@
 \author{مهدی حق‌وردی}
 
 \institute{
-    \\
-    \includegraphics[height=1.2cm]{logos/logo}
-    %\\
-    %دانشگاه اصفهان
+\\
+\includegraphics[height=1.2cm]{logos/logo}\\
+دانشگاه اصفهان
 }
 \date{}
 
