Change the subject

--- a/Presentation/contextmanagers.tex
+++ b/Presentation/contextmanagers.tex
@@ -33,68 +33,41 @@
 \usepackage{xepersian}
 \settextfont{Yas}
 \setdigitfont{Yas}
-%\setlength{\parskip}{\baselineskip}
 
 \input{docs/macros}
 \input{figs/figstyle}
 
-\title{بررسی \lr{Context Manager}ها در پایتون}
+\title{کامپایلر سی‌پایتون چگونه کار می‌کند؟}
 \author{مهدی حق‌وردی}
 
 \institute{
-\\
-\includegraphics[height=1.2cm]{logos/logo}\\
+\\\includegraphics[height=1.2cm]{logos/logo}\\
 دانشگاه اصفهان
 }
 \date{}
 
 \begin{document}
     
-    \begin{frame}[plain]
-        \begin{center}
-            به نام خدا
-        \end{center}
-        
-        \maketitle
-        
-        %\begin{center}
-        %{\footnotesize arash.shafiei@gmail.com}
-        %\end{center}
-        
-    \end{frame}
-    
-    \setcounter{framenumber}{0}
-    
-    %\input{docs/licence}
-    
-    \raggedleft
-    
-    %%%%%%%%%%%%
-    \begin{frame}{فهرست مطالب}
-        \begin{flushright}
-            \tableofcontents
-        \end{flushright}
-    \end{frame}
-    %%%%%%%%%%%%
-    
-    %%%%%%%%%%%%
-    \input{docs/chap01/chap01}
-    %\input{docs/chap02/chap02}
-    %\input{docs/chap03/chap03}
-    %\input{docs/chap04/chap04}
-    %\input{docs/chap05/chap05}
-    %\input{docs/chap06/chap06}
-    %\input{docs/chap07/chap07}
-    %\input{docs/chap08/chap08}
-    %\input{docs/chap09/chap09}
-    %%%%%%%%%%%%
-    
-    %%%%%%%%%%%%
-    %\section*{References}
-    %\begin{frame}<0>[noframenumbering]
-    %\bibliographystyle{apalike}
-    %\bibliography{docs/bib}
-    %\end{frame}
-    %%%%%%%%%%%%
-    
+\begin{frame}[plain]
+\begin{center}
+به نام خدا
+\end{center}
+\maketitle
+\end{frame}
+
+\setcounter{framenumber}{0}
+\raggedleft
+
+\begin{frame}{فهرست مطالب}
+\begin{flushleft}
+\tableofcontents
+\end{flushleft}
+\end{frame}
+
+\section{\lr{Overview}}
+\section{\lr{Decoding}}
+\section{\lr{Tokenizing}}
+\section{\lr{Parsing}}
+\section{\lr{Abstract Systax Tree}}
+\section{\lr{Compiling}}
 \end{document}
