Overview is edited

--- a/Presentation/cpythoncompiler.tex
+++ b/Presentation/cpythoncompiler.tex
@@ -101,24 +101,30 @@ Back-end: Compiling
 \end{itemize}
 \end{frame}
 
-\subsection{Why front-end and back-end?}
-\begin{frame}{Why front-end and back-end?}
+\subsection{Explantion}
+\begin{frame}{Explanation}
 \begin{itemize}
 \item[-]
 We’ve got a front-end and a back-end part in this process.
 
 \item[-]
-front-end: getting down to the AST
+Front-end: getting down to the AST
 
 \item[-]
-back-end: to get the generated AST and compile it down to something
+Back-end: to get the generated AST and compile it down to something
 
 \item[-]
-good example is \href{https://www.pypy.org/}{PyPy} which is a front-end for Python
+Good example is \href{https://www.pypy.org/}{PyPy} which is a front-end for Python
+
+\item[-]
+Ease of writing the code
+
+\item[-]
+A better view to the process
 \end{itemize}
 \end{frame}
 
-\section{Decoding}
+\section{Decoding - ``Bytes" to ``Text"}
 \section{Tokenizing}
 \section{Parsing}
 \section{Abstract Systax Tree}
