the whole structure of the slides is written

--- a/Presentation/cpythoncompiler.tex
+++ b/Presentation/cpythoncompiler.tex
@@ -125,8 +125,18 @@ A better view to the process
 \end{frame}
 
 \section{Decoding - ``Bytes" to ``Text"}
-\section{Tokenizing}
-\section{Parsing}
-\section{Abstract Systax Tree}
-\section{Compiling}
+\subsection{Encoding Declaration}
+\subsection{Default encoding and Non-ASCII characters}
+
+\section{Tokenizing - `Text`" to ``Words"}
+\subsection{{\ttfamily tokenize} library}
+
+\section{Parsing - ``Words" to ``Sentence"}
+
+\section{Abstract Systax Tree - ``Sentence" to ``Semantics"}
+
+\section{Compiling - ``Sematics" to ``Bytecode"}
+\subsection{Bytecode}
+\subsection{Where is {\ttfamily stdlib}}
+
 \end{document}
