Add animation to Overview

--- a/Presentation/cpythoncompiler.tex
+++ b/Presentation/cpythoncompiler.tex
@@ -104,22 +104,22 @@ Back-end: Compiling
 \subsection{Explantion}
 \begin{frame}{Explanation}
 \begin{itemize}
-\item[-]
+\item[-]<1->
 We’ve got a front-end and a back-end part in this process.
 
-\item[-]
+\item[-]<2->
 Front-end: getting down to the AST
 
-\item[-]
+\item[-]<3->
 Back-end: to get the generated AST and compile it down to something
 
-\item[-]
+\item[-]<4->
 Good example is \href{https://www.pypy.org/}{PyPy} which is a front-end for Python
 
-\item[-]
+\item[-]<5->
 Ease of writing the code
 
-\item[-]
+\item[-]<6->
 A better view to the process
 \end{itemize}
 \end{frame}
