Add animation to Default encoding

--- a/Presentation/cpythoncompiler.tex
+++ b/Presentation/cpythoncompiler.tex
@@ -173,10 +173,10 @@ re.compile("conding[:=]\s*([-\w.]+)")
 \subsection{Default encoding and Non-ASCII characters}
 \begin{frame}{Default Encoding and Non-ASCII Characters}
 \begin{itemize}
-\item[-]
+\item[-]<1>
 From \href{https://peps.python.org/pep-3120/}{PEP 3120} UTF-8 is considered as the default enconding, and along with this with \href{https://peps.python.org/pep-3131/}{PEP 3131}
 
-\item[-]
+\item[-]<2>
 Python supports Non-ASCII identifiers also, this means that you can use french or germen alphabet
 (with accent) in your variable names, like:
 \end{itemize}
