fix a bactic typo

--- a/Presentation/cpythoncompiler.tex
+++ b/Presentation/cpythoncompiler.tex
@@ -188,14 +188,14 @@ löwis = 'Löwis'
 print(löwis)
 \end{lstlisting}
 \end{frame}
-\section{Tokenizing - `Text`" to ``Words"}
-\begin{frame}{Tokenizing - `Text`" to ``Words"}
+\section{Tokenizing - ``Text" to ``Words"}
+\begin{frame}{Tokenizing - ``Text" to ``Words"}
 \begin{itemize}
 {\LARGE \item[-] Take the text and break it up into words}
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Tokenizing - `Text`" to ``Words" (Cont'd)}
+\begin{frame}{Tokenizing - ``Text" to ``Words" (Cont'd)}
 \begin{itemize}
 \item[-]<1>
 At this point we have our text, but we’ve got just a bunch of characters following each other
@@ -206,7 +206,7 @@ which the term \textit{token} is just a fancy word for words.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Tokenizing - `Text`" to ``Words" (Cont'd)}
+\begin{frame}[fragile]{Tokenizing - ``Text" to ``Words" (Cont'd)}
 \begin{flushleft}
 How do we know to break the word? For instance in english language, its based on a space, but for programs it
 does not make sence. 
@@ -223,7 +223,7 @@ these should be tokenized like:
 \end{flushleft}
 \end{frame}
 
-\begin{frame}[fragile]{Tokenizing - `Text`" to ``Words" (Cont'd)}
+\begin{frame}[fragile]{Tokenizing - ``Text" to ``Words" (Cont'd)}
 \begin{flushleft}
 \begin{lstlisting}[language=python, keywordstyle=\color{Mulberry}\textbf]
 import shlex
