--- a/Presentation/cpythoncompiler.tex
+++ b/Presentation/cpythoncompiler.tex
@@ -71,230 +71,10 @@ In the name of Allah
 \end{flushleft}
 \end{frame}
 
-\section{Overview}
-\begin{frame}{Overview}
-\begin{itemize}
-\item[-]
-Which steps does CPython takes to compile your source code?
-\item[-]
-Why these steps?
-\item[-]
-How they are done?
-\end{itemize}
-\end{frame}
-
-\subsection{Diagram}
-\begin{frame}{Diagram}
-\begin{itemize}
-\item[-] 
-{\small \ttfamily 
------------------------------------------------------------ \\
-| Decoding -> Tokenizing -> Parsing -> AST | -> Compiling | \\
------------------------------------------------------------ \\
-}
-
-\item[-]
-Front-end: Decoding, Tokenizing, Parsing and AST
-
-\item[-]
-Back-end: Compiling
-\end{itemize}
-\end{frame}
-
-\subsection{Explantion}
-\begin{frame}{Explanation}
-\begin{itemize}
-\item[-]<1->
-We’ve got a front-end and a back-end part in this process.
-
-\item[-]<2->
-Front-end: getting down to the AST
-
-\item[-]<3->
-Back-end: to get the generated AST and compile it down to something
-
-\item[-]<4->
-Good example is \href{https://www.pypy.org/}{PyPy} which is a front-end for Python
-
-\item[-]<5->
-Ease of writing the code
-
-\item[-]<6->
-A better view to the process
-\end{itemize}
-\end{frame}
-
-\section{Decoding - ``Bytes" to ``Text"}
-\begin{frame}{Decoding - ``Bytes" to ``Text"}
-\begin{itemize}
-{\LARGE \item[-] Translate bytes from disk to actual text}
-\end{itemize}
-\end{frame}
-
-\subsection{Encoding Declaration}
-\begin{frame}{Encoding Declaration}
-\begin{itemize}
-\item[-] As of \href{https://peps.python.org/pep-0263/}{PEP 263}, you can specify the encoding of your Python module (basically a module is a text
-file which python code is written into) at the very top line of the file something like:
-\end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]{Encoding Declaration (Cont'd)}
-
-\begin{flushleft}
-Declaration:
-\begin{lstlisting}
-#!/usr/bin/python
-# -*- coding: <encoding name> -*-
-\end{lstlisting}
-\end{flushleft}
-
-\begin{flushleft}
-e.g.
-\begin{lstlisting}[language=python, keywordstyle=\color{Mulberry}\textbf]
-#!/usr/bin/python
-# -*- coding: ascii -*-
-
-import math
-print(math.sin(math.radians(90)))  # 1.0
-\end{lstlisting}
-\end{flushleft}
-\end{frame}
-
-\begin{frame}[fragile]{Encoding Declaration (Cont'd)}
-\begin{flushleft}
-Which gets compiled like this:
-\begin{lstlisting}[language=python]
-re.compile("conding[:=]\s*([-\w.]+)")
-\end{lstlisting}
-\end{flushleft}
-\end{frame}
-
-\subsection{Default encoding and Non-ASCII characters}
-\begin{frame}{Default Encoding and Non-ASCII Characters}
-\begin{itemize}
-\item[-]<1>
-From \href{https://peps.python.org/pep-3120/}{PEP 3120} UTF-8 is considered as the default enconding, and along with this with \href{https://peps.python.org/pep-3131/}{PEP 3131}
-
-\item[-]<2>
-Python supports Non-ASCII identifiers also, this means that you can use french or germen alphabet
-(with accent) in your variable names, like:
-\end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]{Default Encoding and Non-ASCII Characters (Cont'd)}
-\begin{lstlisting}[language=python, keywordstyle=\color{Mulberry}\textbf]
-löwis = 'Löwis'
-print(löwis)
-\end{lstlisting}
-\end{frame}
-\section{Tokenizing - ``Text" to ``Words"}
-\begin{frame}{Tokenizing - ``Text" to ``Words"}
-\begin{itemize}
-{\LARGE \item[-] Take the text and break it up into words}
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Tokenizing - ``Text" to ``Words" (Cont'd)}
-\begin{itemize}
-\item[-]<1>
-At this point we have our text, but we’ve got just a bunch of characters following each other
-
-\item[-]<2> NOW we do \textit{tokenizing}
-
-which the term \textit{token} is just a fancy word for words.
-\end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]{Tokenizing - ``Text" to ``Words" (Cont'd)}
-\begin{flushleft}
-How do we know to break the word? For instance in english language, its based on a space, but for programs it
-does not make sence. 
-
-i.e. there's is no diffrenece between:
-\begin{lstlisting}[language=python, keywordstyle=\color{Mulberry}\textbf]
-print((lambda x: x*2 - 1)(2))  # 3
-\end{lstlisting}
-and
-\begin{lstlisting}[language=python, keywordstyle=\color{Mulberry}\textbf]
-print((lambda    x: x * 2-    1)(2))  # 3
-\end{lstlisting}
-these should be tokenized like:
-\end{flushleft}
-\end{frame}
-
-\begin{frame}[fragile]{Tokenizing - ``Text" to ``Words" (Cont'd)}
-\begin{flushleft}
-\begin{lstlisting}[language=python, keywordstyle=\color{Mulberry}\textbf]
-import shlex
-print(list(shlex.shlex(
-    'print((lambda x: x*2 - 1)(2))  # 3'
-))
-
-print(list(shlex.shlex(
-    'print((lambda    x: x * 2-    1)(2))  # 3'
-)))
-\end{lstlisting}
-as
-\begin{lstlisting}
-['print', '(', '(', 'lambda', 'x', ':', 'x',
- '*', '2', '-', '1', ')', '(', '2', ')', ')']
-\end{lstlisting}
-\end{flushleft}
-\end{frame}
-\subsection{{\ttfamily tokenize} library}
-
-\begin{frame}[fragile]{{\ttfamily tokenize} library}
-\begin{lstlisting}[language=bash, numbers=none]
-$ echo 'print((lambda x: x*2-1)(2)) # 3' | python -m tokenize -e
-1,0-1,5:            NAME           'print'        
-1,5-1,6:            LPAR           '('            
-1,6-1,7:            LPAR           '('            
-1,7-1,13:           NAME           'lambda'       
-1,17-1,18:          NAME           'x'            
-1,18-1,19:          COLON          ':'            
-1,20-1,21:          NAME           'x'            
-1,22-1,23:          STAR           '*'            
-1,24-1,25:          NUMBER         '2'            
-1,25-1,26:          MINUS          '-'            
-1,30-1,31:          NUMBER         '1'            
-1,31-1,32:          RPAR           ')'            
-\end{lstlisting}
-\end{frame}
-
-\begin{frame}[fragile]
-\begin{lstlisting}[language=bash, numbers=none]
-1,32-1,33:          LPAR           '('            
-1,33-1,34:          NUMBER         '2'            
-1,34-1,35:          RPAR           ')'            
-1,35-1,36:          RPAR           ')'            
-1,38-1,41:          COMMENT        '# 3'          
-1,41-1,42:          NEWLINE        '\n'           
-2,0-2,0:            ENDMARKER      ''   
-\end{lstlisting}
-\end{frame}
-\section{Parsing - ``Words" to ``Sentence"}
-\begin{frame}{Parsing - ``Words" to ``Sentence"}
-\begin{itemize}
-{\LARGE \item[-] Take the words and make sentences out of them}
-\end{itemize}
-\end{frame}
-
-\section{Abstract Systax Tree - ``Sentence" to ``Semantics"}
-\begin{frame}{Abstract Systax Tree - ``Sentence" to ``Semantics"}
-\begin{itemize}
-{\LARGE \item[-] Take the sentences and figures out what the heck you are saying}
-\end{itemize}
-\end{frame}
-
-\section{Compiling - ``Sematics" to ``Bytecode"}
-\begin{frame}{Compiling - ``Sematics" to ``Bytecode"}
-\begin{itemize}
-{\LARGE \item[-] Take the AST and generates the bytecode to be executed}
-\end{itemize}
-\end{frame}
-
-\subsection{Bytecode}
-\subsection{Where is {\ttfamily stdlib}}
-
+\input{docs/overview}
+\input{docs/decode}
+\input{docs/tokenize}
+\input{docs/parse}
+\input{docs/ast}
+\input{docs/compile}
 \end{document}
