--- a/Presentation/docs/overview.tex
+++ b/Presentation/docs/overview.tex
@@ -2,7 +2,7 @@
 \begin{frame}{Overview}
     \begin{itemize}
         \item[-]
-        Which steps does CPython takes to compile your source code?
+        Which steps does CPython take to compile your source code?
         \item[-]
         Why these steps?
         \item[-]
@@ -35,10 +35,10 @@
         We’ve got a front-end and a back-end part in this process.
         
         \item[-]<2->
-        Front-end: getting down to the AST
+        Front-end: Getting down to the AST
         
         \item[-]<3->
-        Back-end: to get the generated AST and compile it down to something
+        Back-end: Get the generated AST and compile it down to something
         
         \item[-]<4->
         Good example is \href{https://www.pypy.org/}{PyPy} which is a front-end for Python
