--- a/Presentation/docs/parse.tex
+++ b/Presentation/docs/parse.tex
@@ -7,10 +7,10 @@
 
 \begin{frame}{Parsing - ``Words" to ``Sentence" (Cont'd)}
 \begin{itemize}
-\item[-] Now we have broken everything into words, we can care about how to structure our sentences
+\item[-]<1-> Now we have broken everything into words, we can care about how to structure our sentences
 and make them meaningful following specific grammer rules. 
 
-\item[-]
+\item[-]<2->
 In parsing we use a grammer
 to define a structure, you can check Python grammer in \url{https://github.com/python/cpython/tree/main/Grammar}
 \end{itemize}
@@ -40,6 +40,5 @@ break_stmt: 'break'
 
 \item[-]<2> It was probably was oldest python code which was written by “Guido van Rossum” and hadn’t changed way back since
 Decemeber of 1998 :-)
-
 \end{itemize}
 \end{frame}
