--- a/Presentation-2/slides.tex
+++ b/Presentation-2/slides.tex
@@ -34,8 +34,14 @@
 \settextfont{Yas}
 
 \input{docs/macros}
-\title{\lr{\LaTeX}$\,$و استفاده‌های آن}
-\author{سلام۱\\سلام۲\\سلام۳}
+\title{\lr{\LaTeX}}
+\author{
+فاطمه علی‌ملکی \\
+امیررضا جهانگیری \\
+محمدحسین چهکندی \\
+مهدی $\,$ حق‌وردی \\
+خدیجه نظری \\
+}
 
 \institute{
 \\\includegraphics[height=1.2cm]{logos/logo}\\
