--- a/Presentation-2/docs/parts.tex
+++ b/Presentation-2/docs/parts.tex
@@ -40,7 +40,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}{ساختاربندی سند}
+\begin{frame}{ساختاربندی سند}\label{parts-chapters}
 \begin{itemize}\itemr
 \item[-]
 تگ‌های زیر برای قسمت‌بندی و تعیین ساختار سند استفاده می‌شوند
