bring the needed stuff

--- a/Presentation-2/docs/parts.tex
+++ b/Presentation-2/docs/parts.tex
@@ -18,7 +18,7 @@
 \lr{\texttt{book}} و
 \lr{\texttt{letter}}
 و موارد زیادی دیگری‌ست که لیست بلندی از آنها در 
-\href{https://ctan.org/topic/class}{\lr{https://ctan.org/topic/class}}
+\url{https://ctan.org/topic/class}
 موجود است.
 \end{itemize}
 \end{frame}
