--- a/Presentation-2/docs/refs-cites.tex
+++ b/Presentation-2/docs/refs-cites.tex
@@ -121,3 +121,55 @@ OS must schedule and dispatch...
 \includegraphics[width=0.7\textwidth, height=0.75\textheight]{docs/images/proc-nameref-change}
 \end{center}
 \end{frame}
+
+\begin{frame}{فهرست منابع}
+\begin{itemize}\itemr
+\item[-]
+برای یک مقاله یا پایان‌نامه، وجود فهرست منابع کامل و ارجاع به موقع به آنها بسیار ضروری‌ست.
+
+\item[-]
+معمولا برای فهرست منابع پایان‌نامه‌ها و مقالات، دانشگاه‌ها و ژورنال‌ها قواعد خاص خود را دارند که در اختیار دانشجویان یا نویسندگان مقاله قرار می‌دهند.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{فهرست منابع}
+\begin{itemize}\itemr
+\item[-]
+برای یک مقاله یا پایان‌نامه، وجود فهرست منابع کامل و ارجاع به موقع به آنها بسیار ضروری‌ست.
+
+\item[-]
+معمولا برای فهرست منابع پایان‌نامه‌ها و مقالات، دانشگاه‌ها و ژورنال‌ها قواعد خاص خود را دارند که در اختیار دانشجویان یا نویسندگان مقاله قرار می‌دهند.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{استفاده از \lr{Bib\TeX}}
+\begin{itemize}\itemr
+\item[-]
+در این روش، اطلاعات تمامی منابع مورد استفاده با فرمت 
+\lr{Bib\TeX}
+در یک فایل با پسوند \lr{bib} نوشته می‌شوند.
+
+\item[-]
+برای دریافت آن فرمت خاص باید از 
+\url{https://scholar.google.com/}
+استفاده کرد.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{جستجوی مقاله}
+\begin{center}
+\includegraphics[width=\textwidth]{docs/images/search}
+\end{center}
+\end{frame}
+
+\begin{frame}{استفاده از \lr{Bib\TeX}}
+\begin{center}
+\includegraphics[width=0.8\textwidth, height=0.8\textheight]{docs/images/bibtex}
+\end{center}
+\end{frame}
+
+\begin{frame}{کپی و ذخیره‌ کردن آن}
+\begin{center}
+\includegraphics[width=\textwidth]{docs/images/copy-save}
+\end{center}
+\end{frame}
