completing the citing

--- a/Presentation-2/docs/refs-cites.tex
+++ b/Presentation-2/docs/refs-cites.tex
@@ -173,3 +173,78 @@ OS must schedule and dispatch...
 \includegraphics[width=\textwidth]{docs/images/copy-save}
 \end{center}
 \end{frame}
+
+\begin{frame}[fragile]{فرمت \lr{plain}}
+\begin{latin}
+\begin{lstlisting}[keywords={chapter, section, label, ref}, keywordstyle=\color{Mulberry}\textbf]
+\chapter{Virtual Machines}
+In \cite{shannon2011construction}, Dr. Mark Shannon discusses...
+
+\section{Stack Machines}
+But also in \cite{shannon2006ac} we disagrees with...
+
+\bibliographystyle{plain}  % HERE
+\bibliography{ref}
+\end{lstlisting}
+\end{latin}
+\end{frame}
+
+\begin{frame}{در متن}
+\begin{center}
+\includegraphics[width=0.55\textwidth, height=0.7\textheight]{docs/images/plain-1}
+\end{center}
+\end{frame}
+
+\begin{frame}{در فهرست}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.5\textheight]{docs/images/plain-2}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{unsrt} در متن}
+\begin{center}
+\includegraphics[width=0.55\textwidth, height=0.7\textheight]{docs/images/unsrt-1}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{unsrt} در فهرست}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.5\textheight]{docs/images/unsrt-2}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{alpha} در متن}
+\begin{center}
+\includegraphics[width=0.55\textwidth, height=0.7\textheight]{docs/images/alpha-1}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{alpha} در فهرست}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.5\textheight]{docs/images/alpha-2}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{apalike} در متن}
+\begin{center}
+\includegraphics[width=0.55\textwidth, height=0.7\textheight]{docs/images/apalike-1}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{apalike} در فهرست}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.5\textheight]{docs/images/apalike-2}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{ieeetr} در متن}
+\begin{center}
+\includegraphics[width=0.55\textwidth, height=0.7\textheight]{docs/images/ieeetr-1}
+\end{center}
+\end{frame}
+
+\begin{frame}{فرمت \lr{ieeetr} در فهرست}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.5\textheight]{docs/images/ieeetr-2}
+\end{center}
+\end{frame}
